--- a/src/Tests/Plotting/CMakeLists.txt
+++ b/src/Tests/Plotting/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(Quivers)
 add_subdirectory(Axes)
 add_subdirectory(HeavyCurveStreaming)
 add_subdirectory(PolarGauge)
+add_subdirectory(MultiPlot)
