--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,4 +8,6 @@ add_subdirectory(Annotation)
 add_subdirectory(Thermavip)
 add_subdirectory(Plugins)
 add_subdirectory(Tests)
+if(EXISTS External)
 add_subdirectory(External)
+endif()
