--- a/src/Plugins/IRCameras/CMakeLists.txt
+++ b/src/Plugins/IRCameras/CMakeLists.txt
@@ -23,7 +23,7 @@ target_include_directories(IRCameras PRIVATE
 	${PROJECT_SOURCE_DIR}/../../DataType 
 	${PROJECT_SOURCE_DIR}/../../Core 
 	${PROJECT_SOURCE_DIR}/../../Plotting 
-	${PROJECT_SOURCE_DIR}/../../GUI
+	${PROJECT_SOURCE_DIR}/../../Gui
 )
 
 target_link_libraries(IRCameras PRIVATE
