--- a/src/Tests/Plotting/Quivers/CMakeLists.txt
+++ b/src/Tests/Plotting/Quivers/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_AUTOMOC ON)
 include(GNUInstallDirs)
 
 find_package(QT NAMES Qt5 Qt6 REQUIRED COMPONENTS Core)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Gui Network Xml Widgets OpenGL PrintSupport)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets OpenGL Core Gui Xml Network Sql PrintSupport)
 
 add_executable(Quiver 
     main.cpp 
