--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,16 +54,16 @@ endif()
 
 # Make configure_ffmpeg executable
 IF (UNIX)
-	execute_process(COMMAND "chmod 100755 configure_ffmpeg")
+	execute_process(COMMAND chmod 777 ${PROJECT_SOURCE_DIR}/configure_ffmpeg)
 ENDIF()
 
 IF (NOT MSVC)
 # Create a dummy target to build ffmpeg as a prebuild step
-add_custom_target(ffmpeg BYPRODUCTS "${PROJECT_SOURCE_DIR}/build_ffmpeg.h"
-  COMMAND ${PROJECT_SOURCE_DIR}/configure_ffmpeg)
-add_executable(dummy ${PROJECT_SOURCE_DIR}/dummy.c "${PROJECT_SOURCE_DIR}/build_ffmpeg.h")
-target_include_directories(dummy PRIVATE "${PROJECT_SOURCE_DIR}")
-
+#add_custom_target(ffmpeg BYPRODUCTS "${PROJECT_SOURCE_DIR}/build_ffmpeg.h"
+#  COMMAND ${PROJECT_SOURCE_DIR}/configure_ffmpeg)
+#add_executable(dummy ${PROJECT_SOURCE_DIR}/dummy.c "${PROJECT_SOURCE_DIR}/build_ffmpeg.h")
+#target_include_directories(dummy PRIVATE "${PROJECT_SOURCE_DIR}")
+add_custom_target(ffmpeg ALL COMMAND ${PROJECT_SOURCE_DIR}/configure_ffmpeg)
 ENDIF()
 
 
