Added StreamingMandelbrotPipeline example

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,8 @@ add_subdirectory(Annotation)
 add_subdirectory(Thermavip)
 add_subdirectory(Plugins)
 add_subdirectory(Tests)
-if(EXISTS External)
+#if(EXISTS External)
 add_subdirectory(External)
-endif()
+#else()
+#message(STATUS "No External folder found!")
+#endif()
