--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,8 +8,9 @@ add_subdirectory(Annotation)
 add_subdirectory(Thermavip)
 add_subdirectory(Plugins)
 add_subdirectory(Tests)
-#if(EXISTS External)
+
+if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/External)
 add_subdirectory(External)
-#else()
-#message(STATUS "No External folder found!")
-#endif()
+else()
+message(STATUS "No External folder found!")
+endif()
