--- a/src/Thermavip/CMakeLists.txt
+++ b/src/Thermavip/CMakeLists.txt
@@ -11,7 +11,7 @@ include(GNUInstallDirs)
 
 if(MSVC)
 	if (CMAKE_BUILD_TYPE STREQUAL "Release" )
-		add_executable(Thermavip  
+		add_executable(Thermavip  WIN32
 			main.cpp Thermavip_resource.rc
 		)
 	else()
