--- a/src/External/west_plugins/CMakeLists.txt
+++ b/src/External/west_plugins/CMakeLists.txt
@@ -1,8 +1,7 @@
+if(WIN32)
+	add_subdirectory(NVF)
+	add_subdirectory(AIA)
+	add_subdirectory(Tokida)
+endif()
 
-# https://www.reddit.com/r/cpp_questions/comments/xnu9e0/cmake_how_to_glob_or_add_all_subdirectories/
-file(GLOB V_GLOB LIST_DIRECTORIES true "*")
-foreach(item ${V_GLOB})
-	if(IS_DIRECTORY ${item})
-		add_subdirectory(${item})
-	endif()
-endforeach()
+add_subdirectory(WEST)
