updated build files. Moved tests to examples.

--- a/src/Annotation/CMakeLists.txt
+++ b/src/Annotation/CMakeLists.txt
@@ -34,8 +34,7 @@ target_link_libraries(VipAnnotation PRIVATE
 
 # Add default compiler flags
 set(TARGET_PROJECT VipAnnotation)
-include(${PROJECT_SOURCE_DIR}/../compiler_flags.cmake)
-
+include(${THERMAVIP_COMPILER_FLAGS_FILE})
 
 
 # Configure Librir
@@ -45,15 +44,12 @@ IF(WITH_LIBRIR)
 	ExternalProject_Add(librir
 	  GIT_REPOSITORY https://github.com/IRFM/librir.git
 	  GIT_TAG main
-	  #CMAKE_ARGS -DWITH_WEST=ON
 	)
 	
 	add_dependencies(VipAnnotation librir)
 	install(DIRECTORY ${CMAKE_BINARY_DIR}/src/Annotation/librir-prefix/src/librir-build/install/python/librir DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip")
 	
 endif()
-
-
 
 install(TARGETS VipAnnotation
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} 
@@ -62,15 +58,21 @@ install(TARGETS VipAnnotation
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 install(TARGETS VipAnnotation
-    LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip"
-    FRAMEWORK DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip"
-    RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip"
+    LIBRARY DESTINATION "${THERMAVIP_APPLICATION_DIR}"
+    FRAMEWORK DESTINATION "${THERMAVIP_APPLICATION_DIR}"
+    RUNTIME DESTINATION "${THERMAVIP_APPLICATION_DIR}"
 )
 install(TARGETS VipAnnotation
-	LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/tests"
-    FRAMEWORK DESTINATION "${CMAKE_INSTALL_PREFIX}/tests"
-    RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}/tests"
+	LIBRARY DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
+    FRAMEWORK DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
+    RUNTIME DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
 )
+install(TARGETS VipAnnotation
+	LIBRARY DESTINATION "${THERMAVIP_TEST_DIR}"
+    FRAMEWORK DESTINATION "${THERMAVIP_TEST_DIR}"
+    RUNTIME DESTINATION "${THERMAVIP_TEST_DIR}"
+)
+
 
 
 file(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/*.h)
