--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,14 @@ add_subdirectory(Gui)
 add_subdirectory(Annotation)
 add_subdirectory(Thermavip)
 add_subdirectory(Plugins)
+
+if(WITH_EXAMPLES)
+add_subdirectory(Examples)
+endif()
+
+if(WITH_TESTS)
 add_subdirectory(Tests)
+endif()
 
 if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/External)
 add_subdirectory(External)
