--- a/src/Core/CMakeLists.txt
+++ b/src/Core/CMakeLists.txt
@@ -29,7 +29,7 @@ target_link_libraries(VipCore PRIVATE
 )
 
 set(TARGET_PROJECT VipCore)
-include(${PROJECT_SOURCE_DIR}/../compiler_flags.cmake)
+include(${THERMAVIP_COMPILER_FLAGS_FILE})
 
 if(WIN32)
 set_property(TARGET VipCore PROPERTY AUTOMOC_MOC_OPTIONS "-nw -D_WIN32")
@@ -44,14 +44,19 @@ install(TARGETS VipCore
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 install(TARGETS VipCore
-    LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip"
-    FRAMEWORK DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip"
-    RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip"
+    LIBRARY DESTINATION "${THERMAVIP_APPLICATION_DIR}"
+    FRAMEWORK DESTINATION "${THERMAVIP_APPLICATION_DIR}"
+    RUNTIME DESTINATION "${THERMAVIP_APPLICATION_DIR}"
 )
 install(TARGETS VipCore
-	LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/tests"
-    FRAMEWORK DESTINATION "${CMAKE_INSTALL_PREFIX}/tests"
-    RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}/tests"
+	LIBRARY DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
+    FRAMEWORK DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
+    RUNTIME DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
+)
+install(TARGETS VipCore
+	LIBRARY DESTINATION "${THERMAVIP_TEST_DIR}"
+    FRAMEWORK DESTINATION "${THERMAVIP_TEST_DIR}"
+    RUNTIME DESTINATION "${THERMAVIP_TEST_DIR}"
 )
 
 file(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/*.h)
