--- a/src/Logging/CMakeLists.txt
+++ b/src/Logging/CMakeLists.txt
@@ -18,8 +18,7 @@ target_compile_definitions(VipLogging PRIVATE
 
 
 set(TARGET_PROJECT VipLogging)
-include(${PROJECT_SOURCE_DIR}/../compiler_flags.cmake)
-
+include(${THERMAVIP_COMPILER_FLAGS_FILE})
 
 install(TARGETS VipLogging
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} 
@@ -28,14 +27,19 @@ install(TARGETS VipLogging
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 install(TARGETS VipLogging
-    LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip"
-    FRAMEWORK DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip"
-    RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip"
+    LIBRARY DESTINATION "${THERMAVIP_APPLICATION_DIR}"
+    FRAMEWORK DESTINATION "${THERMAVIP_APPLICATION_DIR}"
+    RUNTIME DESTINATION "${THERMAVIP_APPLICATION_DIR}"
 )
 install(TARGETS VipLogging
-	LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/tests"
-    FRAMEWORK DESTINATION "${CMAKE_INSTALL_PREFIX}/tests"
-    RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}/tests"
+	LIBRARY DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
+    FRAMEWORK DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
+    RUNTIME DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
+)
+install(TARGETS VipLogging
+	LIBRARY DESTINATION "${THERMAVIP_TEST_DIR}"
+    FRAMEWORK DESTINATION "${THERMAVIP_TEST_DIR}"
+    RUNTIME DESTINATION "${THERMAVIP_TEST_DIR}"
 )
 
 file(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/*.h)
