--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@
 cmake_minimum_required(VERSION 3.16)
 
 project(thermavip
-    VERSION 4.5.1
+    VERSION 4.5.2
     DESCRIPTION "thermavip"
     HOMEPAGE_URL "https://github.com/IRFM/thermavip"
     LANGUAGES CXX C
@@ -12,36 +12,28 @@ project(thermavip
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Make sure (if possible) to use Release build of imported libraries (namely Qt)
-#set(CMAKE_MAP_IMPORTED_CONFIG_RELEASE Release)
-#set(CMAKE_MAP_IMPORTED_CONFIG_DEBUG Release)
-#set(CMAKE_MAP_IMPORTED_CONFIG_RELWITHDEBUGINFO Release)
- 
 # add Qt
-
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
-
 find_package(QT NAMES Qt5 Qt6 REQUIRED )
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets OpenGL Core Gui Xml Network Sql PrintSupport Svg)
-
-MESSAGE(STATUS "Qt5 found!")
+MESSAGE(STATUS "Qt found!")
 
 include(GNUInstallDirs) 
 
+# Global options
 option(LOCAL_INSTALL "Install locally" ON)
 option(WITH_LONG_DOUBLE "Use long double as the default type for 2D point representation" OFF)
 option(WITH_FFMEG "Build ffmpeg plugin" OFF)
 option(WITH_HDF5 "Build HDF5 plugin" OFF)
 option(WITH_PYTHON "Build Python plugin" OFF)
 option(WITH_LIBRIR "Build and install librir" OFF)
+option(WITH_EXAMPLES "Build examples" ON)
+option(WITH_TESTS "Build tests" ON)
 option(WITH_MICRO "Experimental, use micro generic allocator to reduce memory footprint" OFF)
-#option(WITH_WEST "Build and install WEST related features" OFF)
 
-if(WITH_WEST)
-	set(WITH_LIBRIR ON)
-endif()
 
+# Local installation
 IF(LOCAL_INSTALL)
 	SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/install) 
 	MESSAGE(STATUS ${CMAKE_INSTALL_PREFIX})
@@ -59,16 +51,6 @@ IF(LOCAL_INSTALL)
 ENDIF()
 
 
-#IF(WITH_WEST)
-#	IF(EXISTS ${PROJECT_SOURCE_DIR}/src/External/thermavip_WEST_plugins)
-#		message(STATUS "Pulling WEST repository...")
-#		execute_process(COMMAND git pull WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/src/External/thermavip_WEST_plugins)
-#	ELSE()
-#		message(STATUS "Cloning WEST repository...")
-#		execute_process(COMMAND git clone https://github.com/IRFM/thermavip_WEST_plugins.git ${PROJECT_SOURCE_DIR}/src/External/thermavip_WEST_plugins)
-#	ENDIF()
-#endif()
-
 
 # Make configure_ffmpeg executable
 IF (UNIX)
@@ -85,12 +67,47 @@ add_custom_target(ffmpeg ALL COMMAND ${PROJECT_SOURCE_DIR}/configure_ffmpeg)
 ENDIF()
 
 
-
+# Long double support
 if(WITH_LONG_DOUBLE)
 	set(LONG_DOUBLE_VALUE 1)
 else()
 	set(LONG_DOUBLE_VALUE 0)
 endif()
+
+
+# Define thermavip include directories for internal plugins and SDK libraries
+set(THERMAVIP_INCLUDE_DIRS 
+	${PROJECT_SOURCE_DIR}/src/Logging 
+	${PROJECT_SOURCE_DIR}/src/DataType 
+	${PROJECT_SOURCE_DIR}/src/Core 
+	${PROJECT_SOURCE_DIR}/src/Plotting 
+	${PROJECT_SOURCE_DIR}/src/Gui 
+	${PROJECT_SOURCE_DIR}/src/Annotation 
+	CACHE INTERNAL "THERMAVIP_INCLUDE_DIRS")
+	
+# Define thermavip SDK libraries for internal plugins
+set(THERMAVIP_LIBRARIES 
+	VipDataType
+	VipLogging
+	VipCore
+	VipPlotting
+	VipGui
+	VipAnnotation
+	CACHE INTERNAL "THERMAVIP_INCLUDE_DIRS")
+	
+# Define thermavip SDK compiler flags file for internal plugins and SDK libraries
+set(THERMAVIP_COMPILER_FLAGS_FILE 
+	${PROJECT_SOURCE_DIR}/src/compiler_flags.cmake
+	CACHE INTERNAL "THERMAVIP_COMPILER_FLAGS_FILE")
+
+# Define global variables used internally
+set(THERMAVIP_APPLICATION_DIR ${CMAKE_INSTALL_PREFIX}/thermavip CACHE INTERNAL "THERMAVIP_APPLICATION_DIR")
+set(THERMAVIP_ICON_DIR ${CMAKE_INSTALL_PREFIX}/thermavip/icons CACHE INTERNAL "THERMAVIP_ICON_DIR")
+set(THERMAVIP_PLUGIN_DIR "${CMAKE_INSTALL_PREFIX}/thermavip/VipPlugins" CACHE INTERNAL "THERMAVIP_PLUGIN_DIR")
+set(THERMAVIP_EXAMPLE_DIR "${CMAKE_INSTALL_PREFIX}/examples" CACHE INTERNAL "THERMAVIP_EXAMPLE_DIR")
+set(THERMAVIP_TEST_DIR "${CMAKE_INSTALL_PREFIX}/tests" CACHE INTERNAL "THERMAVIP_TEST_DIR")
+set(THERMAVIP_EXAMPLE_SETUP_FILE ${PROJECT_SOURCE_DIR}/src/Examples/setup_example.cmake CACHE INTERNAL "THERMAVIP_EXAMPLE_SETUP_FILE")
+
 
 configure_file(VipConfig.h.in VipConfig.h)
 install(FILES ${CMAKE_BINARY_DIR}/VipConfig.h DESTINATION include)
@@ -107,25 +124,23 @@ set(PLUGINS_PYTHON_REQUIRE "" CACHE INTERNAL "")
 add_subdirectory(src)
 
 
-
-
 # Generate requirements.txt
 #configure_file(requirements.txt.in requirements.txt @ONLY)
 #install(FILES ${CMAKE_BINARY_DIR}/requirements.txt DESTINATION ${CMAKE_INSTALL_PREFIX})
 
 # Install directories
 install(DIRECTORY skins DESTINATION "${CMAKE_INSTALL_PREFIX}")
-install(DIRECTORY skins DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip")
+install(DIRECTORY skins DESTINATION "${THERMAVIP_APPLICATION_DIR}")
 install(DIRECTORY help DESTINATION "${CMAKE_INSTALL_PREFIX}")
-install(DIRECTORY help DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip")
+install(DIRECTORY help DESTINATION "${THERMAVIP_APPLICATION_DIR}")
 install(DIRECTORY icons DESTINATION "${CMAKE_INSTALL_PREFIX}")
-install(DIRECTORY icons DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip")
+install(DIRECTORY icons DESTINATION "${THERMAVIP_APPLICATION_DIR}")
 install(DIRECTORY fonts DESTINATION "${CMAKE_INSTALL_PREFIX}")
-install(DIRECTORY fonts DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip")
+install(DIRECTORY fonts DESTINATION "${THERMAVIP_APPLICATION_DIR}")
 
 if(WIN32)
 	file(GLOB win32_tools "tools/win32/*.exe")
-	install(FILES ${win32_tools} DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip")
+	install(FILES ${win32_tools} DESTINATION "${THERMAVIP_APPLICATION_DIR}")
 endif()
 
 
