--- a/cmake/thermavipConfig.cmake.in
+++ b/cmake/thermavipConfig.cmake.in
@@ -18,8 +18,42 @@ ELSE()
 ENDIF()
 
 set_and_check(THERMAVIP_APPLICATION_DIR ${PACKAGE_PREFIX_DIR}/thermavip)
+set_and_check(THERMAVIP_ICON_DIR ${PACKAGE_PREFIX_DIR}/icons)
 set_and_check(THERMAVIP_PLUGIN_DIR ${PACKAGE_PREFIX_DIR}/thermavip/VipPlugins)
 
 set(THERMAVIP_LIBRARIES VipLogging VipDataType VipPlotting VipCore VipGui VipAnnotation @PLUGINS_LIBS@)
+
+
+# Setup Qt
+find_package(QT NAMES Qt5 Qt6 REQUIRED )
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets OpenGL Core Gui Xml Network Sql PrintSupport Svg)
+
+set(QT_PREFIX Qt${QT_VERSION_MAJOR})
+set(CMAKE_AUTOMOC ON)
+
+if(${QT_VERSION_MAJOR} LESS 6)
+set(THERMAVIP_QT_LIBRARIES Qt5::Core
+    Qt5::Gui
+    Qt5::Network
+	Qt5::Widgets
+	Qt5::OpenGL
+	Qt5::PrintSupport
+    Qt5::Xml
+	Qt5::Sql
+	Qt5::Svg
+	)
+else()
+set(THERMAVIP_QT_LIBRARIES Qt::Core
+    Qt::Gui
+    Qt::Network
+	Qt::Widgets
+	Qt::OpenGL
+	Qt::PrintSupport
+    Qt::Xml
+	Qt::Sql
+	Qt::Svg
+	)
+endif()
+
 
 check_required_components(thermavip)
