--- a/src/DataType/CMakeLists.txt
+++ b/src/DataType/CMakeLists.txt
@@ -23,7 +23,7 @@ target_compile_definitions(VipDataType PRIVATE
 )
 
 set(TARGET_PROJECT VipDataType)
-include(${PROJECT_SOURCE_DIR}/../compiler_flags.cmake)
+include(${THERMAVIP_COMPILER_FLAGS_FILE})
 
 install(TARGETS VipDataType
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} 
@@ -32,14 +32,19 @@ install(TARGETS VipDataType
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 install(TARGETS VipDataType
-    LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip"
-    FRAMEWORK DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip"
-    RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip"
+    LIBRARY DESTINATION "${THERMAVIP_APPLICATION_DIR}"
+    FRAMEWORK DESTINATION "${THERMAVIP_APPLICATION_DIR}"
+    RUNTIME DESTINATION "${THERMAVIP_APPLICATION_DIR}"
 )
 install(TARGETS VipDataType
-	LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/tests"
-    FRAMEWORK DESTINATION "${CMAKE_INSTALL_PREFIX}/tests"
-    RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}/tests"
+	LIBRARY DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
+    FRAMEWORK DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
+    RUNTIME DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
+)
+install(TARGETS VipDataType
+	LIBRARY DESTINATION "${THERMAVIP_TEST_DIR}"
+    FRAMEWORK DESTINATION "${THERMAVIP_TEST_DIR}"
+    RUNTIME DESTINATION "${THERMAVIP_TEST_DIR}"
 )
 
 file(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/*.h)
