--- a/src/Plugins/IRCameras/CMakeLists.txt
+++ b/src/Plugins/IRCameras/CMakeLists.txt
@@ -15,29 +15,16 @@ add_library(IRCameras SHARED
     ${Sources} ${Headers}
 )
 
-target_include_directories(IRCameras PRIVATE
-    ${PROJECT_SOURCE_DIR}/../../Logging 
-	${PROJECT_SOURCE_DIR}/../../DataType 
-	${PROJECT_SOURCE_DIR}/../../Core 
-	${PROJECT_SOURCE_DIR}/../../Plotting 
-	${PROJECT_SOURCE_DIR}/../../Gui
-)
-
-target_link_libraries(IRCameras PRIVATE
-	VipDataType
-	VipLogging
-	VipCore
-	VipPlotting
-	VipGui
-)
+target_include_directories(IRCameras PRIVATE ${THERMAVIP_INCLUDE_DIRS})
+target_link_libraries(IRCameras PRIVATE ${THERMAVIP_LIBRARIES})
 
 # Add default compiler flags
 set(TARGET_PROJECT IRCameras)
-include(${PROJECT_SOURCE_DIR}/../../compiler_flags.cmake)
+include(${THERMAVIP_COMPILER_FLAGS_FILE})
 
 # Plugin standard installation
 install(TARGETS IRCameras
-	LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip/VipPlugins"
-    FRAMEWORK DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip/VipPlugins"
-    RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}/thermavip/VipPlugins"
+	LIBRARY DESTINATION "${THERMAVIP_PLUGIN_DIR}"
+    FRAMEWORK DESTINATION "${THERMAVIP_PLUGIN_DIR}"
+    RUNTIME DESTINATION "${THERMAVIP_PLUGIN_DIR}"
 )
