Removed msvc warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ option(WITH_LIBRIR "Build and install librir" OFF)
 option(WITH_EXAMPLES "Build examples" ON)
 option(WITH_TESTS "Build tests" ON)
 option(WITH_MICRO "Experimental, use micro generic allocator to reduce memory footprint" OFF)
+option(NO_WARNING "Treat warnings as errors" OFF)
 
 
 # Local installation
