--- a/src/External/west_plugins/CMakeLists.txt
+++ b/src/External/west_plugins/CMakeLists.txt
@@ -1,7 +1,7 @@
-if(WIN32)
-	add_subdirectory(NVF)
-	add_subdirectory(AIA)
-	#add_subdirectory(Tokida)
-endif()
 
-add_subdirectory(WEST)
+file(GLOB V_GLOB LIST_DIRECTORIES true "*")
+foreach(item ${V_GLOB})
+	if(IS_DIRECTORY ${item})
+		add_subdirectory(${item})
+	endif()
+endforeach()
