--- a/src/Plugins/Ffmpeg/CMakeLists.txt
+++ b/src/Plugins/Ffmpeg/CMakeLists.txt
@@ -91,3 +91,10 @@ install(TARGETS Ffmpeg
     FRAMEWORK DESTINATION "${THERMAVIP_PLUGIN_DIR}"
     RUNTIME DESTINATION "${THERMAVIP_PLUGIN_DIR}"
 )
+
+# Make Ffmpeg plugin usable as a library
+install(TARGETS Ffmpeg
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/Plugins
+)
+file(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/*.h)
+install(FILES ${HEADER_FILES} DESTINATION "${CMAKE_INSTALL_PREFIX}/include/Plugins/Ffmpeg/")
