--- a/src/Plugins/IRCameras/CMakeLists.txt
+++ b/src/Plugins/IRCameras/CMakeLists.txt
@@ -28,3 +28,10 @@ install(TARGETS IRCameras
     FRAMEWORK DESTINATION "${THERMAVIP_PLUGIN_DIR}"
     RUNTIME DESTINATION "${THERMAVIP_PLUGIN_DIR}"
 )
+
+# Make IRCameras plugin usable as a library
+install(TARGETS IRCameras
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/Plugins
+)
+file(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/*.h)
+install(FILES ${HEADER_FILES} DESTINATION "${CMAKE_INSTALL_PREFIX}/include/Plugins/IRCameras/")
