test simplified python init for cmake based installation

--- a/src/Plugins/Python/CMakeLists.txt
+++ b/src/Plugins/Python/CMakeLists.txt
@@ -48,14 +48,15 @@ else()
 	message(STATUS "Use Python include dirs: ${Python3_INCLUDE_DIRS} ${Python3_NumPy_INCLUDE_DIRS}" )
 	message(STATUS "Use Python lib dirs: ${Python3_LIBRARY_DIRS}" )
 	message(STATUS "Use Python libraries: ${Python3_LIBRARIES}" )
-	message(STATUS "Use Python library: ${Python3_LIBRARY}" )
 	message(STATUS "Use Python interpreter: ${Python3_EXECUTABLE}" )
+	message(STATUS "Use Python STDLIB: ${Python3_STDLIB}" )
 	
 	target_include_directories(Python PRIVATE ${Python3_INCLUDE_DIRS} ${Python3_NumPy_INCLUDE_DIRS})
 	target_link_directories(Python PRIVATE ${Python3_LIBRARY_DIRS})
 	target_link_libraries(Python PRIVATE ${Python3_LIBRARIES})
 	target_compile_definitions(Python PRIVATE -DVIP_PYTHON_INTERPRETER="${Python3_EXECUTABLE}")	
-	target_compile_definitions(Python PRIVATE -DVIP_PYTHON_SHARED_LIB="${Python3_LIBRARY}")
+	target_compile_definitions(Python PRIVATE -DVIP_PYTHON_SHARED_LIBS="${Python3_LIBRARIES}")
+	target_compile_definitions(Python PRIVATE -DVIP_PYTHON_STDLIB="${Python3_STDLIB}")
 	#target_compile_definitions(Python PRIVATE "VIP_PYTHONHOME=$ENV{VIP_PYTHONHOME}")
 	
 	SET(PYTHON_RUNTIME ${Python_RUNTIME_LIBRARY_DIRS})	
