corrected ffmpeg configuration with librir

--- a/src/Plugins/Ffmpeg/CMakeLists.txt
+++ b/src/Plugins/Ffmpeg/CMakeLists.txt
@@ -27,7 +27,11 @@ target_compile_definitions(Ffmpeg PRIVATE ENABLE_H264 BUILD_FFMPEG_LIB)
 
 # Configure ffmpeg path, use librir ffmpeg install if possible
 IF(WITH_LIBRIR)
-	set(FFMPEG_PATH ${CMAKE_BINARY_DIR}/src/Annotation/librir-prefix/src/librir/3rd_64)
+	if(MSVC)
+		set(FFMPEG_PATH ${CMAKE_BINARY_DIR}/src/Annotation/librir-prefix/src/librir/3rd_64)
+	else()
+		set(FFMPEG_PATH ${CMAKE_BINARY_DIR}/src/Annotation/librir-prefix/src/librir-build/install)
+	endif()
 else()
 	set(FFMPEG_PATH ${CMAKE_SOURCE_DIR}/3rd_64)
 endif()
@@ -56,8 +60,11 @@ ELSE()
 		SET(FFMPEG_PREFIX )
 		SET(FFMPEG_SUFFIX .dll)
 	ELSE()
-		SET(FFMPEG_LIB_DIR ${FFMPEG_PATH}/ffmpeg/install/lib)
-		SET(FFMPEG_INCLUDE_DIR ${FFMPEG_PATH}/ffmpeg/install/include)
+		#SET(FFMPEG_LIB_DIR ${FFMPEG_PATH}/ffmpeg/install/lib)
+		#SET(FFMPEG_INCLUDE_DIR ${FFMPEG_PATH}/ffmpeg/install/include)
+		SET(FFMPEG_LIB_DIR ${FFMPEG_PATH}/lib)
+		SET(FFMPEG_INCLUDE_DIR ${FFMPEG_PATH}/include)
+		
 		SET(FFMPEG_LIBS avdevice avformat avcodec swscale avutil swresample avfilter)
 		SET(ADDITIONAL_FFMPEG_LIBS postproc)
 		SET(FFMPEG_PREFIX lib)
